# quant-backtest-framework

./: .gitignore  404.html  Cargo.toml  README.md  index.html  mkdocs.yml  requirements.txt  search.html  sitemap.xml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  deploy.yml
assets/css/: icp-theme.css
backtest/: monte_carlo.py  report_generator.py  stress_test.py  vectorbt_engine.py
module1-fundamentals/: index.html
module1-fundamentals/exercises/: 01_hello_rust_starter.rs  02_variable_basics_starter.rs  04_control_flow_challenge_starter.rs
module1-fundamentals/exercises/01_hello_rust/: index.html
module1-fundamentals/exercises/02_variable_basics/: index.html
module1-fundamentals/exercises/03_function_workshop/: index.html
module1-fundamentals/exercises/04_control_flow_challenge/: index.html
module1-fundamentals/guides/control_flow/: index.html
module1-fundamentals/guides/data_types/: index.html
module1-fundamentals/guides/functions/: index.html
module1-fundamentals/guides/getting_started/: index.html
module1-fundamentals/guides/variables/: index.html
module2-memory-management/: index.html
module2-memory-management/exercises/: 01_ownership_practice_starter.rs  02_borrowing_challenge_starter.rs  04_memory_management_debugging_starter.rs
module2-memory-management/exercises/01_ownership_practice/: index.html
module2-memory-management/exercises/02_borrowing_challenge/: index.html
module2-memory-management/exercises/03_slice_workshop/: index.html
module2-memory-management/exercises/04_memory_management_debugging/: index.html
module2-memory-management/guides/: index.html
module2-memory-management/guides/borrowing/: index.html
module2-memory-management/guides/memory_concepts/: index.html
module2-memory-management/guides/ownership/: index.html
module2-memory-management/guides/slices/: index.html
module3-data-types/: index.html
module3-data-types/exercises/: 01_library_system_starter.rs  02_error_handling_starter.rs
module3-data-types/exercises/01_library_system/: index.html
module4-code-organization/: index.html
module4-code-organization/exercises/: 01_module_explorer_starter.rs
module5-collections/: index.html
module6-advanced-concepts/: index.html
module6-advanced-concepts/exercises/: 01_trait_workshop_starter.rs
module7-icp-integration/: index.html
modules/: index.md
modules/module1-fundamentals/: README.md
modules/module2-memory-management/: README.md
modules/module3-data-types/: README.md
modules/module4-code-organization/: README.md
modules/module5-collections/: README.md
modules/module6-advanced-concepts/: README.md
modules/module7-icp-integration/: README.md
scripts/: dev-container-setup.sh
search/: search_index.json
(+40 files in other folders)
